<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.unicefwinterizationplatform.winterization_android.LoginActivity" android:background="#d3d3d3"
    android:clickable="true" android:keepScreenOn="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:gravity="center">

    <TextView
        android:text="UniSupply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
        android:textSize="35sp" android:textIsSelectable="true" android:id="@+id/textView2"
         android:gravity="center"
            />

    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:id="@+id/logoView"

        android:layout_toLeftOf="@id/textView2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/unisuppylogobig"
        />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login"
            android:id="@+id/textView"
            android:layout_marginTop="10dp" android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"/>


</LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_alignParentBottom="true">
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/editText_username"
            android:imeOptions="actionDone"
        android:gravity="top"
            android:inputType="textVisiblePassword"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:hint="username" android:textSize="30sp"
        android:layout_margin="10dp"
            android:singleLine="true"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_margin="10dp"
        android:gravity="top"
            android:id="@+id/editText_password"

             android:hint="password" android:textSize="30sp"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/custombutton"

            android:id="@+id/button_login"
            android:layout_margin="5dp"

            android:textSize="40sp"
            android:layout_gravity="center"
            />
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="First Time?"
           android:id="@+id/button_settings"
           android:background="@null"
           android:textSize="15sp"
           android:layout_gravity="center"
           />
   </LinearLayout>

</RelativeLayout>